--- a/index.html
+++ b/index.html
@@ -2,11 +2,138 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+    <header class="page-header">
+      <div class="logo"><img src="" alt="Логотип"></div>
+      <nav class="navigation">
+        <ul class="navigation__list">
+          <li class="navigation__item navigation__item--active-tab">
+            Главная
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__link" href="">О Седоне</a>
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__link" href="catalog.html">Гостиницы</a>
+          </li>
+        </ul>
+  
+        <ul class="navigation__list navigation__user">
+          <li class="navigation__item">
+            <a class="navigation__link" href="">
+              <span class="visually-hidden">Поиск</span>
+            </a>
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__link" href="">
+              <span class="visually-hidden">Избранное</span>
+            </a>
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__link" href="">Хочю сюда!</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main class="main-index">
+      <section class="hero">
+        <img class="hero__image" src="" alt="Добро пожаловать в Седону">
+        <h1 class="hero__title">Седона &ndash; небольшой городок в Аризоне, заслуживающий большего!</h1>
+        <p class="hero__subtitle">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+      </section>
+      <section class="advantages">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <ul class="advantages__list">
+          <li class="advantages__item">
+            <h3 class="advantages__title advantages__title--light">Настоящий городок</h3>
+            <p class="advantages__text advantages__text--light">Седона &ndash; не аттракцион для туристов, там течёт своя жизнь</p>
+          </li>
+          <li class="advantages__item advantages__item--large">
+            <img class="advantages__gallery" src="" alt="Настоящий городок Седона">
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Небольшая площадь</h3>
+            <p class="advantages__text">Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Красивая дорога</h3>
+            <p class="advantages__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Мало туристов</h3>
+            <p class="advantages__text">Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+          <li class="advantages__item advantages__item--large">
+            <img class="advantages__gallery" src="" alt="Гранд-Каньон">
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Там есть мост дьявола</h3>
+            <p class="advantages__text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          </li>
+          <li class="advantages__item">
+            <img class="advantages__icon" src="" alt="Жильё">
+            <h3 class="advantages__title">жильё</h3>
+            <p class="advantages__text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li class="advantages__item">
+            <img class="advantages__icon" src="" alt="Еда">
+            <h3 class="advantages__title">Еда</h3>
+            <p class="advantages__text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li class="advantages__item">
+            <img class="advantages__icon" src="" alt="Сувениры">
+            <h3 class="advantages__title">Сувениры</h3>
+            <p class="advantages__text">Не только китайского, но и настоящего местного производства!</p>
+          </li>
+        </ul>
+      </section>
+      <section class="search-hotels">
+        <h2 class="search-hotels__title">Заинтересовались?</h2>
+        <p class="search-hotels__description">Укажите предполагаемые даты поездки,
+          <br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <a href="catalog.html" class="search-hotels__button">Поиск гостиницы в Седоне</a>
+      </section>
+      <section class="subscribe">
+        <h2 class="subscribe__title">Подпишитесь на рассылку</h2>
+        <p class="subscribe__text">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post">
+          <input type="email" name="email" placeholder="Ваш e-mail"><button class="subscribe__button" type="submit">Подписаться</button>
+        </form>
+      </section>
+    </main>
+    <footer class="footer">
+      <section class="footer__social">
+        <h2 class="visually-hidden">Давайте дружить</h2>
+        <ul class="footer__social-list">
+          <li class="footer__social-item">
+            <a href="#" class="footer__button">
+              <span class="visually-hidden">ВКонтакте</span>
+            </a>
+          </li>
+          <li class="footer__social-item">
+            <a href="#" class="footer__button">
+              <span class="visually-hidden">Телеграм</span>
+            </a>
+          </li>
+          <li class="footer__social-item">
+            <a href="#" class="footer__button">
+              <span class="visually-hidden">Youtube</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section class="footer__contacts">
+        <h2 class="visually-hidden">Контактный номер</h2>
+        <p class="footer__hot-number">+7(812) 812-12-12</p>
+      </section>
+      <section class="footer__production">
+        <h2 class="visually-hidden">Сделано в html academy</h2>
+        <img class="footer__logo" src="" alt="html academy">
+      </section>
+    </footer>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
-  </body>
+</body>
 </html>
