added data-test attributes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-    <header class="page-header">
+    <header class="page-header" data-test="header">
       <div class="logo"><img src="" alt="Логотип"></div>
       <nav class="navigation">
         <ul class="navigation__list">
@@ -20,7 +20,7 @@
             <a class="navigation__link" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
-  
+
         <ul class="navigation__list navigation__user">
           <li class="navigation__item">
             <a class="navigation__link" href="">
@@ -38,13 +38,13 @@
         </ul>
       </nav>
     </header>
-    <main class="main-index">
-      <section class="hero">
+    <main class="main-index" data-test="main">
+      <section class="hero" data-test="hero">
         <img class="hero__image" src="" alt="Добро пожаловать в Седону">
         <h1 class="hero__title">Седона &ndash; небольшой городок в Аризоне, заслуживающий большего!</h1>
         <p class="hero__subtitle">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
-      <section class="advantages">
+      <section class="advantages" data-test="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advantages__list">
           <li class="advantages__item">
@@ -90,13 +90,13 @@
           </li>
         </ul>
       </section>
-      <section class="search-hotels">
+      <section class="search-hotels" data-test="search">
         <h2 class="search-hotels__title">Заинтересовались?</h2>
         <p class="search-hotels__description">Укажите предполагаемые даты поездки,
           <br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <a href="catalog.html" class="search-hotels__button">Поиск гостиницы в Седоне</a>
       </section>
-      <section class="subscribe">
+      <section class="subscribe" data-test="subscribe">
         <h2 class="subscribe__title">Подпишитесь на рассылку</h2>
         <p class="subscribe__text">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post">
@@ -104,7 +104,7 @@
         </form>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer" data-test="footer">
       <section class="footer__social">
         <h2 class="visually-hidden">Давайте дружить</h2>
         <ul class="footer__social-list">
