--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   </head>
   <body>
     <header class="page-header" data-test="header">
-      <div class="logo"><img src="" alt="Логотип"></div>
       <nav class="navigation">
+        <a class="navigation__logo-link" href="index.html"><img class="navigation__logo" src="" alt="Логотип «Седона»"></a>
         <ul class="navigation__list">
-          <li class="navigation__item navigation__item--active-tab">
-            Главная
+          <li class="navigation__item">
+            <a class="navigation__link navigation__link--active-tab" href="index.html">Главная</a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link" href="">О Седоне</a>
+            <a class="navigation__link" href="#">О Седоне</a>
           </li>
           <li class="navigation__item">
             <a class="navigation__link" href="catalog.html">Гостиницы</a>
@@ -23,17 +23,17 @@
 
         <ul class="navigation__list navigation__user">
           <li class="navigation__item">
-            <a class="navigation__link" href="">
+            <a class="navigation__link" href="#">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link" href="">
+            <a class="navigation__link" href="#">
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link" href="">Хочю сюда!</a>
+            <a class="navigation__link" href="#">Хочю сюда!</a>
           </li>
         </ul>
       </nav>
