--- a/catalog.html
+++ b/catalog.html
@@ -99,16 +99,142 @@
           </fieldset>
           <fieldset class="catalog-filter__group">
             <legend class="catalog-filter__title">Стоимость, ₽:</legend>
-            <div>
-              <label><input name="input-min" class="control-input" type="number" min="0" max="10000" step="100" value="0"> от</label>
-              <label><input name="input-max" class="control-input" type="number" min="0" max="10000" step="100" value="9000"> до</label>
+              <label class="catalog-filter__cost"><input name="input-min" class="control-input" type="number" min="0" max="10000" step="100" value="0"> от</label>
+              <label class="catalog-filter__cost"><input name="input-max" class="control-input" type="number" min="0" max="10000" step="100" value="9000"> до</label>
               <div class="catalog-filter__slider"></div>
-            </div>
           </fieldset>
           <button class="catalog-filter__submit-button" type="submit">Применить</button>
           <button class="catalog-filter__cancel-button" type="button">Сбросить</button>
         </form>
       </header>
+      <section class="catalog-products">
+        <h2 class="visually-hidden">Список товаров с фильтрами</h2>
+        <div class="catalog-products__filter">
+          <label  class="control">Найдено гостиниц: <output name="count-hotels">38</output></label>
+          <select class="select-control" aria-label="Сортировка">
+            <option value="popular">Сначала дешёвое</option>
+            <option value="cheap">Сначала популярное</option>
+            <option value="expensive">Сначала дорогое</option>
+          </select>
+          <a href="#" class="catalog-products__button">
+            <span class="visually-hidden">Показать обычные карточки</span>
+          </a>
+          <a href="#" class="catalog-products__button">
+            <span class="visually-hidden">Показать крупные карточки</span>
+          </a>
+          <a href="#" class="catalog-products__button">
+            <span class="visually-hidden">Показать список</span>
+          </a>
+        </div>
+        <ul class="product-list">
+          <li class="product-card">
+            <a class="product-card__link" href="#">
+              <img class="product-card__image" src="" alt="Звёздное небо, вид из пещеры">
+              <h3 class="product-card__title">Amara Resort & Spa</h3>
+            </a>
+            <div class="product-card__description">
+              <span class="product-card__type">Гостиница</span>
+              <span class="product-card__price">От 4000 ₽</span>
+            </div>
+            <div class="product-card__button-container">
+              <a class="product-card__button product-card__button--primary" href="#">Подробнее</a>
+              <button class="product-card__button product-card__button--secondary" type="button">В избранное</button>
+            </div>
+            <div class="product-card__rating-container">
+              <div class="product-card__stars"></div>
+              <div class="product-card__rating">Рейтинг: <span class="product-card__rating-number">8,5</span></div>
+            </div>
+          </li>
+          <li class="product-card">
+            <a class="product-card__link" href="#">
+              <img class="product-card__image" src="" alt="Радуга над Гранд-Каньоном">
+              <h3 class="product-card__title">Villas at Poco Diablo</h3>
+            </a>
+            <div class="product-card__description">
+              <span class="product-card__type">Гостиница</span>
+              <span class="product-card__price">От 5000 ₽</span>
+            </div>
+            <div class="product-card__button-container">
+              <a class="product-card__button product-card__button--primary" href="#">Подробнее</a>
+              <button class="product-card__button product-card__button--favorite" type="button">В избранном</button>
+            </div>
+            <div class="product-card__rating-container">
+              <div class="product-card__stars"></div>
+              <div class="product-card__rating">Рейтинг: <span class="product-card__rating-number">9,2</span></div>
+            </div>
+          </li>
+          <li class="product-card">
+            <a class="product-card__link" href="#">
+              <img class="product-card__image" src="" alt="Гранд-Каньон в ясную погоду">
+              <h3 class="product-card__title">Desert Quail Inn</h3>
+            </a>
+            <div class="product-card__description">
+              <span class="product-card__type">Гостиница</span>
+              <span class="product-card__price">От 2500 ₽</span>
+            </div>
+            <div class="product-card__button-container">
+              <a class="product-card__button product-card__button--primary" href="#">Подробнее</a>
+              <button class="product-card__button product-card__button--favorite" type="button">В избранном</button>
+            </div>
+            <div class="product-card__rating-container">
+              <div class="product-card__stars"></div>
+              <div class="product-card__rating">Рейтинг: <span class="product-card__rating-number">6,9</span></div>
+            </div>
+          </li>
+          <li class="product-card">
+            <a class="product-card__link" href="#">
+              <img class="product-card__image" src="" alt="Свет над ночным небом Гранд=Каньона">
+              <h3 class="product-card__title">GreenTree</h3>
+            </a>
+            <div class="product-card__description">
+              <span class="product-card__type">Гостиница</span>
+              <span class="product-card__price">От 1500 ₽</span>
+            </div>
+            <div class="product-card__button-container">
+              <a class="product-card__button product-card__button--primary" href="#">Подробнее</a>
+              <button class="product-card__button product-card__button--favorite" type="button">В избранном</button>
+            </div>
+            <div class="product-card__rating-container">
+              <div class="product-card__stars"></div>
+              <div class="product-card__rating">Рейтинг: <span class="product-card__rating-number">5,0</span></div>
+            </div>
+          </li>
+        </ul>
+        <ul class="pagination">
+          <li class="pagination__item">
+            <a class="pagination__link pagination__prev pagination__disabled">
+              <span class="visually-hidden">Предыдущая страница</span>
+            </a>
+          </li>
+          <li class="pagination__item">
+            <a class="pagination__link pagination__link--current">1</a>
+          </li>
+          <li class="pagination__item">
+            <a class="pagination__link" href="#">2</a>
+          </li>
+          <li class="pagination__item">
+            <a class="pagination__link" href="#">3</a>
+          </li>
+          <li class="pagination__item">
+            <a class="pagination__link" href="#">4</a>
+          </li>
+          <li class="pagination__item">
+            <a class="pagination__link" href="#">5</a>
+          </li>
+          <li class="pagination__item">
+            <a class="pagination__link pagination__next" href="#">
+              <span class="visually-hidden">Следующая страница</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section class="inner-subscribe" data-test="subscribe">
+        <h2 class="subscribe__title">Подпишитесь на рассылку</h2>
+        <p class="subscribe__text">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post">
+          <input type="email" name="email" placeholder="Ваш e-mail"><button class="subscribe__button" type="submit">Подписаться</button>
+        </form>
+      </section>
     </main>
     <footer class="footer" data-test="footer">
       <section class="footer__social">
