--- a/index.html
+++ b/index.html
@@ -94,7 +94,26 @@
         <h2 class="search-hotels__title">Заинтересовались?</h2>
         <p class="search-hotels__description">Укажите предполагаемые даты поездки,
           <br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-          <a href="catalog.html" class="search-hotels__button">Поиск гостиницы в Седоне</a>
+          <a href="#popup" class="search-hotels__button">Поиск гостиницы в Седоне</a>
+          <div class="search-hotels__popup-form visually-hidden">
+            <h3 class="search-hotels__popup-title">Поиск гостиницы в Седоне</h3>
+            <img scr="" alt="Закрыть" class="close-button">
+            <form action="https://echo.htmlacademy.ru/courses" method="post">
+              <label class="popup-control">Дата Заезда: <input type="date" id="start-date" name="start-date" value="2020-04-27"></label>
+              <p class="popup-error visually-hidden">Мы не можем отправить вас в прошлое.</p>
+              <label class="popup-control">Дата Выезда: <input type="date" id="end-date" name="end-date" value="2023-09-01"></label>
+              <p class="popup-allow visually-hidden">На эти даты есть свободные номера. Пока есть.</p>
+              <label>Взрослые: <input type="number" id="adult" name="adult" placeholder="2"></label>
+              <label>Дети:
+                <div class="popup-tooltip">
+                  <img class="tooltip-img" src="" alt="tooltip">
+                  <div class="tooltip-hidden-text">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.
+                  </div>
+                </div>
+                <input type="number" id="children" name="children" placeholder="2"></label>
+                <button type="submit" id="popup-submit-button">Найти</button>
+            </form>
+          </div>
       </section>
       <section class="subscribe" data-test="subscribe">
         <h2 class="subscribe__title">Подпишитесь на рассылку</h2>
