--- a/catalog.html
+++ b/catalog.html
@@ -50,7 +50,7 @@
             <a class="breadcrumbs__link" href="catalog.html">Каталог</a>
           </li>
         </ul>
-        <form lass="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
+        <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
           <fieldset class="catalog-filter__group">
             <legend class="catalog-filter__title">Инфраструктура:</legend>
             <ul class="catalog-filter__list">
