--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <a href="#popup" class="search-hotels__button">Поиск гостиницы в Седоне</a>
           <div class="search-hotels__popup-form visually-hidden">
             <h3 class="search-hotels__popup-title">Поиск гостиницы в Седоне</h3>
-            <img scr="" alt="Закрыть" class="close-button">
+            <img src="" alt="Закрыть" class="close-button">
             <form action="https://echo.htmlacademy.ru/courses" method="post">
               <label class="popup-control">Дата Заезда: <input type="date" id="start-date" name="start-date" value="2020-04-27"></label>
               <p class="popup-error visually-hidden">Мы не можем отправить вас в прошлое.</p>
@@ -105,11 +105,11 @@
               <p class="popup-allow visually-hidden">На эти даты есть свободные номера. Пока есть.</p>
               <label>Взрослые: <input type="number" id="adult" name="adult" placeholder="2"></label>
               <label>Дети:
-                <div class="popup-tooltip">
+                <span class="popup-tooltip">
                   <img class="tooltip-img" src="" alt="tooltip">
-                  <div class="tooltip-hidden-text">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.
-                  </div>
-                </div>
+                  <span class="tooltip-hidden-text">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.
+                  </span>
+                </span>
                 <input type="number" id="children" name="children" placeholder="2"></label>
                 <button type="submit" id="popup-submit-button">Найти</button>
             </form>
