--- a/index.html
+++ b/index.html
@@ -50,43 +50,49 @@
           <li class="advantages__item">
             <h3 class="advantages__title advantages__title--light">Настоящий городок</h3>
             <p class="advantages__text advantages__text--light">Седона &ndash; не аттракцион для туристов, там течёт своя жизнь</p>
+            <div class="advantages__media">
+            <img class="advantages__picture" src="" alt="Настоящий городок Седона">
+            </div>
+            <ul class="advantages__child-list">
+              <li class="advantages__item">
+                <h3 class="advantages__title">Небольшая площадь</h3>
+                <p class="advantages__text">Все достопримечательности находятся очень близко</p>
+              </li>
+              <li class="advantages__item">
+                <h3 class="advantages__title">Красивая дорога</h3>
+                <p class="advantages__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              </li>
+              <li class="advantages__item">
+                <h3 class="advantages__title">Мало туристов</h3>
+                <p class="advantages__text">Большинство едет в Гранд Каньон и толпится там</p>
+              </li>
+            </ul>
           </li>
-          <li class="advantages__item advantages__item--large">
-            <img class="advantages__gallery" src="" alt="Настоящий городок Седона">
-          </li>
-          <li class="advantages__item">
-            <h3 class="advantages__title">Небольшая площадь</h3>
-            <p class="advantages__text">Все достопримечательности находятся очень близко</p>
-          </li>
-          <li class="advantages__item">
-            <h3 class="advantages__title">Красивая дорога</h3>
-            <p class="advantages__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="advantages__item">
-            <h3 class="advantages__title">Мало туристов</h3>
-            <p class="advantages__text">Большинство едет в Гранд Каньон и толпится там</p>
-          </li>
-          <li class="advantages__item advantages__item--large">
-            <img class="advantages__gallery" src="" alt="Гранд-Каньон">
-          </li>
+        </ul>
+        <ul  class="advantages__list">
           <li class="advantages__item">
             <h3 class="advantages__title">Там есть мост дьявола</h3>
             <p class="advantages__text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-          </li>
-          <li class="advantages__item">
-            <img class="advantages__icon" src="" alt="Жильё">
-            <h3 class="advantages__title">жильё</h3>
-            <p class="advantages__text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-          </li>
-          <li class="advantages__item">
-            <img class="advantages__icon" src="" alt="Еда">
-            <h3 class="advantages__title">Еда</h3>
-            <p class="advantages__text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-          </li>
-          <li class="advantages__item">
-            <img class="advantages__icon" src="" alt="Сувениры">
-            <h3 class="advantages__title">Сувениры</h3>
-            <p class="advantages__text">Не только китайского, но и настоящего местного производства!</p>
+            <div class="advantages__media">
+              <img class="advantages__picture" src="" alt="Гранд-Каньон">
+            </div>
+            <ul  class="advantages__child-list">
+              <li class="advantages__item">
+                <img class="advantages__icon" src="" alt="Жильё">
+                <h3 class="advantages__title">жильё</h3>
+                <p class="advantages__text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+              </li>
+              <li class="advantages__item">
+                <img class="advantages__icon" src="" alt="Еда">
+                <h3 class="advantages__title">Еда</h3>
+                <p class="advantages__text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+              </li>
+              <li class="advantages__item">
+                <img class="advantages__icon" src="" alt="Сувениры">
+                <h3 class="advantages__title">Сувениры</h3>
+                <p class="advantages__text">Не только китайского, но и настоящего местного производства!</p>
+              </li>
+            </ul>
           </li>
         </ul>
       </section>
