--- a/catalog.html
+++ b/catalog.html
@@ -86,9 +86,9 @@
 		<section class="catalog-products">
 			<h2 class="visually-hidden">Список товаров с фильтрами</h2>
 			<div class="catalog-products__filter">
-				<label class="control">Найдено гостиниц:
+				<p class="control">Найдено гостиниц:
 					<output name="count-hotels">38</output>
-				</label>
+				</p>
 				<select class="select-control" aria-label="Сортировка">
 					<option value="popular">Сначала дешёвое</option>
 					<option value="cheap">Сначала популярное</option>
@@ -188,7 +188,7 @@
 		</section>
 		<section class="footer__contacts">
 			<h2 class="visually-hidden">Контактный номер</h2>
-			<p class="footer__hot-number">+7(812) 812-12-12</p>
+      <p class="footer__hot-number"><a href="tel:+7(812) 812-12-12">+7(812) 812-12-12</a></p>
 		</section>
 		<section class="footer__production">
 			<h2 class="visually-hidden">Сделано в html academy</h2> <img class="footer__logo" src="" alt="html academy"> </section>
