--- a/index.html
+++ b/index.html
@@ -47,52 +47,48 @@
       <section class="advantages" data-test="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advantages__list">
+          <li class="advantages__item advantages__item--large">
+            <img class="advantages__picture" src="" alt="Настоящий городок Седона">
+          </li>
           <li class="advantages__item">
             <h3 class="advantages__title advantages__title--light">Настоящий городок</h3>
             <p class="advantages__text advantages__text--light">Седона &ndash; не аттракцион для туристов, там течёт своя жизнь</p>
-            <div class="advantages__media">
-            <img class="advantages__picture" src="" alt="Настоящий городок Седона">
-            </div>
-            <ul class="advantages__child-list">
-              <li class="advantages__item">
-                <h3 class="advantages__title">Небольшая площадь</h3>
-                <p class="advantages__text">Все достопримечательности находятся очень близко</p>
-              </li>
-              <li class="advantages__item">
-                <h3 class="advantages__title">Красивая дорога</h3>
-                <p class="advantages__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-              </li>
-              <li class="advantages__item">
-                <h3 class="advantages__title">Мало туристов</h3>
-                <p class="advantages__text">Большинство едет в Гранд Каньон и толпится там</p>
-              </li>
-            </ul>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Небольшая площадь</h3>
+            <p class="advantages__text">Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Красивая дорога</h3>
+            <p class="advantages__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Мало туристов</h3>
+            <p class="advantages__text">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
         </ul>
-        <ul  class="advantages__list">
+        <ul class="advantages__list">
+          <li class="advantages__item advantages__item--large">
+            <img class="advantages__picture" src="" alt="Гранд-Каньон">
+          </li>
           <li class="advantages__item">
             <h3 class="advantages__title">Там есть мост дьявола</h3>
             <p class="advantages__text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            <div class="advantages__media">
-              <img class="advantages__picture" src="" alt="Гранд-Каньон">
-            </div>
-            <ul  class="advantages__child-list">
-              <li class="advantages__item">
-                <img class="advantages__icon" src="" alt="Жильё">
-                <h3 class="advantages__title">жильё</h3>
-                <p class="advantages__text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-              </li>
-              <li class="advantages__item">
-                <img class="advantages__icon" src="" alt="Еда">
-                <h3 class="advantages__title">Еда</h3>
-                <p class="advantages__text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-              </li>
-              <li class="advantages__item">
-                <img class="advantages__icon" src="" alt="Сувениры">
-                <h3 class="advantages__title">Сувениры</h3>
-                <p class="advantages__text">Не только китайского, но и настоящего местного производства!</p>
-              </li>
-            </ul>
+          </li>
+          <li class="advantages__item">
+            <img class="advantages__icon" src="" alt="Жильё">
+            <h3 class="advantages__title">жильё</h3>
+            <p class="advantages__text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li class="advantages__item">
+            <img class="advantages__icon" src="" alt="Еда">
+            <h3 class="advantages__title">Еда</h3>
+            <p class="advantages__text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li class="advantages__item">
+            <img class="advantages__icon" src="" alt="Сувениры">
+            <h3 class="advantages__title">Сувениры</h3>
+            <p class="advantages__text">Не только китайского, но и настоящего местного производства!</p>
           </li>
         </ul>
       </section>
@@ -152,7 +148,7 @@
       </section>
       <section class="footer__contacts">
         <h2 class="visually-hidden">Контактный номер</h2>
-        <p class="footer__hot-number">+7(812) 812-12-12</p>
+        <p class="footer__hot-number"><a href="tel:+7(812) 812-12-12">+7(812) 812-12-12</a></p>
       </section>
       <section class="footer__production">
         <h2 class="visually-hidden">Сделано в html academy</h2>
