catalog classes updated

--- a/catalog.html
+++ b/catalog.html
@@ -86,8 +86,8 @@
 		<section class="catalog-products">
 			<h2 class="visually-hidden">Список товаров с фильтрами</h2>
 			<div class="catalog-products__filter">
-				<p class="control">Найдено гостиниц:
-					<output name="count-hotels">38</output>
+				<p class="count-hotels">Найдено гостиниц:
+					<output name="count-hotels-number">38</output>
 				</p>
 				<select class="select-control" aria-label="Сортировка">
 					<option value="popular">Сначала дешёвое</option>
