pagination updated according to mockup

--- a/catalog.html
+++ b/catalog.html
@@ -156,7 +156,8 @@
 				<li class="pagination__item"> <a class="pagination__link" href="#">2</a> </li>
 				<li class="pagination__item"> <a class="pagination__link" href="#">3</a> </li>
 				<li class="pagination__item"> <a class="pagination__link" href="#">4</a> </li>
-				<li class="pagination__item"> <a class="pagination__link" href="#">5</a> </li>
+				<li class="pagination__item"> <a class="pagination__link" href="#">...</a> </li>
+        <li class="pagination__item"> <a class="pagination__link" href="#">10</a> </li>
 				<li class="pagination__item">
 					<a class="pagination__link pagination__next" href="#"> <span class="visually-hidden">Следующая страница</span> </a>
 				</li>
