lazy loading attribute added

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advantages__list">
           <li class="advantages__item advantages__item--large">
-            <img class="advantages__picture" src="images/index/sedona_small_town_800x384.jpg" alt="Настоящий городок Седона" width="800" height="384">
+            <img class="advantages__picture" src="images/index/sedona_small_town_800x384.jpg" alt="Настоящий городок Седона" width="800" height="384" loading="lazy">
           </li>
           <li class="advantages__item">
             <h3 class="advantages__title advantages__title--light">Настоящий городок</h3>
@@ -76,7 +76,7 @@
         </ul>
         <ul class="advantages__list">
           <li class="advantages__item advantages__item--large">
-            <img class="advantages__picture" src="images/index/devil_bridge_800x384.jpg" alt="Мост через Гранд-Каньон" width="800" height="384">
+            <img class="advantages__picture" src="images/index/devil_bridge_800x384.jpg" alt="Мост через Гранд-Каньон" width="800" height="384" loading="lazy">
           </li>
           <li class="advantages__item">
             <h3 class="advantages__title">Там есть мост дьявола</h3>
