--- a/catalog.html
+++ b/catalog.html
@@ -122,7 +122,7 @@
 			</div>
 			<ol class="product-list">
 				<li class="product-card">
-					<a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/amara_resort_spa_300x212_2x.jpg" width="300" height="212" alt="Звёздное небо, вид из пещеры">
+					<a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/amara_resort_spa_300x212_2x.jpg" width="300" height="212" loading="lazy" alt="Звёздное небо, вид из пещеры">
 						<h3 class="product-card__title">Amara Resort & Spa</h3> </a>
 					<div class="product-card__description"> <span class="product-card__type">Гостиница</span> <span class="product-card__price">От 4000 ₽</span> </div>
 					<div class="product-card__button-container"> <a class="product-card__button product-card__button--primary" href="#">Подробнее</a>
@@ -134,7 +134,7 @@
 					</div>
 				</li>
 				<li class="product-card">
-					<a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/villas_at_poco_diablo_300x212_2x.jpg" width="300" height="212" alt="Радуга над Гранд-Каньоном">
+					<a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/villas_at_poco_diablo_300x212_2x.jpg" width="300" height="212" loading="lazy" alt="Радуга над Гранд-Каньоном">
 						<h3 class="product-card__title">Villas at Poco Diablo</h3> </a>
 					<div class="product-card__description"> <span class="product-card__type">Гостиница</span> <span class="product-card__price">От 5000 ₽</span> </div>
 					<div class="product-card__button-container"> <a class="product-card__button product-card__button--primary" href="#">Подробнее</a>
@@ -146,7 +146,7 @@
 					</div>
 				</li>
 				<li class="product-card">
-					<a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/desert_quail_inn_300x212_2x.jpg" width="300" height="212" alt="Гранд-Каньон в ясную погоду">
+					<a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/desert_quail_inn_300x212_2x.jpg" width="300" height="212" loading="lazy" alt="Гранд-Каньон в ясную погоду">
 						<h3 class="product-card__title">Desert Quail Inn</h3> </a>
 					<div class="product-card__description"> <span class="product-card__type">Гостиница</span> <span class="product-card__price">От 2500 ₽</span> </div>
 					<div class="product-card__button-container"> <a class="product-card__button product-card__button--primary" href="#">Подробнее</a>
@@ -158,7 +158,7 @@
 					</div>
 				</li>
 				<li class="product-card">
-					<a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/greentree_inn_300x212_2x.jpg" width="300" height="212" alt="Свет над ночным небом Гранд=Каньона">
+					<a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/greentree_inn_300x212_2x.jpg" width="300" height="212" loading="lazy" alt="Свет над ночным небом Гранд=Каньона">
 						<h3 class="product-card__title">GreenTree</h3> </a>
 					<div class="product-card__description"> <span class="product-card__type">Гостиница</span> <span class="product-card__price">От 1500 ₽</span> </div>
 					<div class="product-card__button-container"> <a class="product-card__button product-card__button--primary" href="#">Подробнее</a>
