--- a/catalog.html
+++ b/catalog.html
@@ -11,28 +11,36 @@
 <body>
   <header class="page-header" data-test="header">
     <nav class="navigation">
-      <a class="navigation__logo-link" href="index.html"><img class="navigation__logo" src="images/logo/logo_sedona.svg" alt="Логотип «Седона»" width="140" height="70"></a>
+      <a class="navigation__logo-link" href="index.html">
+        <img class="navigation__logo" src="images/logo/logo_sedona.svg" alt="Логотип «Седона»" width="140" height="70">
+      </a>
       <ul class="navigation__list">
         <li class="navigation__item">
-          <a class="navigation__link navigation__link--active-tab" href="index.html">Главная</a>
+          <a class="navigation__link" href="index.html">Главная</a>
         </li>
         <li class="navigation__item">
           <a class="navigation__link" href="#">О Седоне</a>
         </li>
         <li class="navigation__item">
-          <a class="navigation__link" href="catalog.html">Гостиницы</a>
+          <a class="navigation__link navigation__link--active-tab" href="catalog.html">Гостиницы</a>
         </li>
       </ul>
 
       <ul class="navigation__list navigation__user">
         <li class="navigation__item">
           <a class="navigation__link" href="#">
-            <img src="images/icons/icon_search.svg" width="20" height="20" alt="Поиск">
+            <span class="visually-hidden">Поиск</span>
+            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M19.5 18.0083L15.8 14.3287C16.8 13.0359 17.5 11.3453 17.5 9.4558C17.5 5.08011 13.9 1.5 9.5 1.5C5.1 1.5 1.5 5.17956 1.5 9.55525C1.5 13.9309 5.1 17.511 9.5 17.511C11.3 17.511 13 16.9144 14.4 15.8204L18.1 19.5L19.5 18.0083ZM9.5 15.5221C6.2 15.5221 3.5 12.837 3.5 9.55525C3.5 6.27348 6.2 3.5884 9.5 3.5884C12.8 3.5884 15.5 6.27348 15.5 9.55525C15.5 12.837 12.8 15.5221 9.5 15.5221Z" fill="black"/>
+            </svg>
           </a>
         </li>
         <li class="navigation__item">
           <a class="navigation__link" href="#">
-            <img src="images/icons/icon_heart.svg" width="20" height="20" alt="Избранное">
+            <span class="visually-hidden">Избранное</span>
+            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M9.9 19C9.6 19 9.3 18.9 9.1 18.6C3.7 12.5 2.4 11.1 2.1 10.7C1.4 9.8 1 8.6 1 7.4C1 4.4 3.4 2 6.5 2C7.8 2 9 2.5 10 3.3C11 2.5 12.3 2 13.5 2C16.5 2 19 4.4 19 7.4C19 8.7 18.5 9.9 17.7 10.8L10.7 18.7C10.5 18.9 10.3 19 9.9 19ZM3.9 9.5C4.2 9.9 7.4 13.5 10 16.4L16.2 9.4C16.7 8.9 16.9 8.2 16.9 7.4C16.9 5.6 15.4 4.1 13.6 4.1C12.6 4.1 11.6 4.6 10.9 5.4C10.6 5.7 10.3 5.8 10 5.8C9.7 5.8 9.4 5.6 9.2 5.4C8.5 4.6 7.5 4.1 6.5 4.1C4.7 4.1 3.2 5.6 3.2 7.4C3.1 8.3 3.5 9 3.9 9.5C3.8 9.5 3.8 9.5 3.9 9.5Z" fill="black"/>
+            </svg>
           </a>
         </li>
         <li class="navigation__item">
@@ -46,7 +54,12 @@
 			<h1 class="inner-header__title">Гостиницы Седоны</h1>
 			<ul class="breadcrumbs">
 				<li class="breadcrumbs__item">
-					<a class="breadcrumbs__link" href="index.html"> <img class="breadcrumbs__icon" src="images/icons/icon_home.svg" width="13" height="15" alt="Главная"></a>
+					<a class="breadcrumbs__link" href="index.html">
+            <svg width="13" height="15" viewBox="0 0 13 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M6.5 0.5L0.5 6.30006V12.5001H12.5V6.30006L6.5 0.5ZM11.5 11.5001H1.5V6.70005L6.5 1.9L11.5 6.70005V11.5001Z" fill="white"/>
+              <path d="M4.5 10.5001H5.5V8.00005H7.5V10.5001H8.5V7.00005H4.5V10.5001Z" fill="white"/>
+            </svg>
+          </a>
 				</li>
 				<li class="breadcrumbs__item"> <a class="breadcrumbs__link" href="catalog.html">Каталог</a> </li>
 			</ul>
@@ -109,13 +122,16 @@
 					<option value="expensive">Сначала дорогое</option>
 				</select>
 				<a href="#" class="catalog-products__button">
-          <img src="images/icons/icon_medium.svg" width="16" height="14" alt="Показать обычные карточки">
+          <span class="visually-hidden">Показать обычные карточки</span>
+          <svg width="16" height="14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4 0H0v6h4V0ZM16 0h-4v6h4V0ZM10 0H6v6h4V0ZM4 8H0v6h4V8ZM16 8h-4v6h4V8ZM10 8H6v6h4V8Z" fill="#000"/></svg>
         </a>
 				<a href="#" class="catalog-products__button">
-          <img src="images/icons/icon_large.svg" width="16" height="14" alt="Показать крупные карточки">
+          <span class="visually-hidden">Показать крупные карточки</span>
+          <svg width="16" height="14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16 12H0v2h16v-2ZM14 2v6H2V2h12Zm2-2H0v10h16V0Z" fill="#000"/></svg>
         </a>
 				<a href="#" class="catalog-products__button">
-          <img src="images/icons/icon_list.svg" width="16" height="14" alt="Показать список">
+          <span class="visually-hidden">Показать список</span>
+          <svg width="16" height="14" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2 0H0v2h2V0ZM16 0H4v2h12V0ZM2 4H0v2h2V4ZM16 4H4v2h12V4ZM2 8H0v2h2V8ZM16 8H4v2h12V8ZM2 12H0v2h2v-2ZM16 12H4v2h12v-2Z" fill="#000"/></svg>
         </a>
 			</div>
 			<ol class="product-list">
@@ -198,17 +214,20 @@
       <ul class="footer__social-list">
         <li class="footer__social-item">
           <a href="#" class="footer__button">
-            <img src="images/icons/social_vkontakte.svg" width="25" height="15" alt="ВКонтакте">
+            <span class="visually-hidden">ВКонтакте</span>
+            <svg width="25" height="15" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M24.12 1.8c.16-.54 0-.94-.8-.94H20.7c-.67 0-.98.34-1.15.73 0 0-1.33 3.2-3.22 5.27-.61.6-.9.8-1.23.8-.16 0-.41-.2-.41-.75v-5.1c0-.66-.19-.95-.74-.95H9.82c-.42 0-.67.3-.67.59 0 .62.95.76 1.04 2.51v3.8c0 .83-.15.98-.48.98-.9 0-3.06-3.2-4.34-6.88-.25-.72-.5-1-1.18-1H1.57c-.75 0-.9.34-.9.73 0 .68.89 4.07 4.14 8.55 2.17 3.06 5.23 4.72 8 4.72 1.68 0 1.88-.37 1.88-1v-2.32c0-.74.16-.88.7-.88.38 0 1.05.19 2.6 1.66 1.79 1.75 2.08 2.54 3.08 2.54h2.63c.75 0 1.12-.37.9-1.1-.23-.72-1.08-1.77-2.2-3.02-.62-.71-1.54-1.48-1.82-1.86-.39-.5-.28-.71 0-1.15 0 0 3.2-4.42 3.54-5.93Z" fill="#83B3D3"/></svg>
           </a>
         </li>
         <li class="footer__social-item">
           <a href="#" class="footer__button">
-            <img src="images/icons/social_telegram.svg" width="18" height="16" alt="Телеграм">
+            <span class="visually-hidden">Телеграм</span>
+            <svg width="18" height="16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16.79.96.84 7.1c-1.09.44-1.08 1.05-.2 1.32l4.1 1.28 9.47-5.98c.44-.27.85-.13.52.17l-7.68 6.93-.28 4.22c.41 0 .6-.2.83-.41l1.99-1.94 4.13 3.06c.77.42 1.31.2 1.5-.71l2.72-12.8c.28-1.1-.43-1.61-1.16-1.28Z" fill="#83B3D3"/></svg>
           </a>
         </li>
         <li class="footer__social-item">
           <a href="#" class="footer__button">
-            <img src="images/icons/social_youtube.svg" width="23" height="18" alt="Youtube">
+            <span class="visually-hidden">Youtube</span>
+            <svg width="23" height="18" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M18.94.36H3.51C1.65.36.33 1.95.33 3.76v10.09c0 1.91 1.32 3.5 3.18 3.5h15.65c1.64 0 3.17-1.59 3.17-3.4V3.76c-.22-1.8-1.53-3.4-3.39-3.4ZM7.99 12.89V4.82l7.34 4.04-7.34 4.03Z" fill="#83B3D3"/></svg>
           </a>
         </li>
       </ul>
@@ -219,9 +238,9 @@
     </section>
     <section class="footer__production">
       <h2 class="visually-hidden">Сделано в html academy</h2>
-        <a href="https://htmlacademy.ru/">
-          <img class="footer__logo" src="images/logo/logo_htmlacademy.svg" alt="html academy" width="115" height="34">
-        </a>
+      <a href="https://htmlacademy.ru/">
+        <img class="footer__logo" src="images/logo/logo_htmlacademy.svg" alt="html academy" width="115" height="34">
+      </a>
     </section>
   </footer>
 </body>
