--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link" href="#">Хочю сюда!</a>
+            <a class="navigation__button" href="#">Хочю сюда!</a>
           </li>
         </ul>
       </nav>
@@ -59,7 +59,7 @@
       <section class="advantages" data-test="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advantages__list">
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item--light">
             <img class="advantages__picture" src="images/index/sedona_small_town_800x384.jpg" alt="Настоящий городок Седона" width="800" height="384" loading="lazy">
             <h3 class="advantages__title">Настоящий городок</h3>
             <p class="advantages__text">Седона &ndash; не аттракцион для туристов, там течёт своя жизнь</p>
@@ -76,7 +76,7 @@
             <h3 class="advantages__title">Мало туристов</h3>
             <p class="advantages__text">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item--light">
             <img class="advantages__picture" src="images/index/devil_bridge_800x384.jpg" alt="Мост через Гранд-Каньон" width="800" height="384" loading="lazy">
             <h3 class="advantages__title">Там есть мост дьявола</h3>
             <p class="advantages__text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
@@ -84,7 +84,7 @@
         </ul>
         <ul class="conditions__list">
           <li class="conditions__item">
-            <h3 class="conditions__title">жильё</h3>
+            <h3 class="conditions__title">Жильё</h3>
             <p class="conditions__text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
           <li class="conditions__item">
@@ -111,7 +111,7 @@
                 <path d="M33.4905 20.7829L32.1982 19.4906L26.4905 25.1983L20.7828 19.4906L19.4905 20.7829L25.1982 26.4906L19.4905 32.1983L20.7828 33.4906L26.4905 27.7829L32.1982 33.4906L33.4905 32.1983L27.7828 26.4906L33.4905 20.7829Z" fill="black"/>
               </svg>
             </div>
-            <form action="https://echo.htmlacademy.ru/courses" method="post">
+            <form class="popup-form" action="https://echo.htmlacademy.ru/courses" method="post">
               <label class="popup-control">Дата Заезда: <input type="date" id="start-date" name="start-date" value="2020-04-27"></label>
               <p class="popup-error visually-hidden">Мы не можем отправить вас в прошлое.</p>
               <label class="popup-control">Дата Выезда: <input type="date" id="end-date" name="end-date" value="2023-09-01"></label>
@@ -132,7 +132,7 @@
         <h2 class="subscribe__title">Подпишитесь на рассылку</h2>
         <p class="subscribe__text">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post">
-          <input type="email" name="email" placeholder="Ваш e-mail"><button class="subscribe__button" type="submit">Подписаться</button>
+          <span class="subscribe__label"><input type="email" name="email" placeholder="Ваш e-mail"></span><button class="subscribe__button" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
