--- a/catalog.html
+++ b/catalog.html
@@ -144,7 +144,7 @@
 					</div>
 					<div class="product-card__rating-container">
 						<div class="product-card__stars"></div>
-						<div class="product-card__rating">Рейтинг: <span class="product-card__rating-number">8,5</span></div>
+						<div class="product-card__button product-card-button__rating">Рейтинг: <span class="product-card__rating-number">8,5</span></div>
 					</div>
 				</li>
 				<li class="product-card">
@@ -156,7 +156,7 @@
 					</div>
 					<div class="product-card__rating-container">
 						<div class="product-card__stars"></div>
-						<div class="product-card__rating">Рейтинг: <span class="product-card__rating-number">9,2</span></div>
+						<div class="product-card__button product-card-button__rating">Рейтинг: <span class="product-card__rating-number">9,2</span></div>
 					</div>
 				</li>
 				<li class="product-card">
@@ -168,7 +168,7 @@
 					</div>
 					<div class="product-card__rating-container">
 						<div class="product-card__stars"></div>
-						<div class="product-card__rating">Рейтинг: <span class="product-card__rating-number">6,9</span></div>
+						<div class="product-card__button product-card-button__rating">Рейтинг: <span class="product-card__rating-number">6,9</span></div>
 					</div>
 				</li>
 				<li class="product-card">
@@ -180,7 +180,7 @@
 					</div>
 					<div class="product-card__rating-container">
 						<div class="product-card__stars"></div>
-						<div class="product-card__rating">Рейтинг: <span class="product-card__rating-number">5,0</span></div>
+						<div class="product-card__button product-card-button__rating">Рейтинг: <span class="product-card__rating-number">5,0</span></div>
 					</div>
 				</li>
 			</ol>
