grid add into product cards + bugfixing

--- a/catalog.html
+++ b/catalog.html
@@ -16,19 +16,13 @@
         </a>
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a class="navigation__link" href="index.html">
-              <span class="navigation__label">Главная</span>
-            </a>
+            <a class="navigation__link" href="index.html">Главная</a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link" href="#">
-              <span class="navigation__label">О Седоне</span>
-            </a>
+            <a class="navigation__link" href="#">О Седоне</a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link  navigation__link--active-tab" href="catalog.html">
-              <span class="navigation__label">Гостиницы</span>
-            </a>
+            <a class="navigation__link navigation__link--active-tab" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
 
@@ -148,50 +142,38 @@
           <li class="product-card">
             <a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/amara_resort_spa_300x212_2x.jpg" width="300" height="212" loading="lazy" alt="Звёздное небо, вид из пещеры">
               <h3 class="product-card__title">Amara Resort & Spa</h3> </a>
-            <div class="product-card__description"> <span class="product-card__type">Гостиница</span> <span class="product-card__price">От 4000 ₽</span> </div>
-            <div class="product-card__button-container"> <a class="product-card__button product-card__button--primary" href="#">Подробнее</a>
-              <button class="product-card__button product-card__button--secondary" type="button">В избранное</button>
-            </div>
-            <div class="product-card__rating-container">
-              <div class="product-card__stars"></div>
-              <div class="product-card__button product-card-button__rating">Рейтинг: <span class="product-card__rating-number">8,5</span></div>
-            </div>
+            <span class="product-card__type">Гостиница</span> <span class="product-card__price">От 4000 ₽</span>
+            <a class="product-card__button product-card__button--primary" href="#">Подробнее</a>
+            <button class="product-card__button product-card__button--secondary" type="button">В избранное</button>
+            <div class="product-card__stars"></div>
+            <div class="product-card__button product-card-button__rating">Рейтинг: <span class="product-card__rating-number">8,5</span></div>
           </li>
           <li class="product-card">
             <a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/villas_at_poco_diablo_300x212_2x.jpg" width="300" height="212" loading="lazy" alt="Радуга над Гранд-Каньоном">
               <h3 class="product-card__title">Villas at Poco Diablo</h3> </a>
-            <div class="product-card__description"> <span class="product-card__type">Гостиница</span> <span class="product-card__price">От 5000 ₽</span> </div>
-            <div class="product-card__button-container"> <a class="product-card__button product-card__button--primary" href="#">Подробнее</a>
-              <button class="product-card__button product-card__button--secondary-favorite" type="button">В избранном</button>
-            </div>
-            <div class="product-card__rating-container">
-              <div class="product-card__stars"></div>
-              <div class="product-card__button product-card-button__rating">Рейтинг: <span class="product-card__rating-number">9,2</span></div>
-            </div>
+            <span class="product-card__type">Гостиница</span> <span class="product-card__price">От 5000 ₽</span>
+            <a class="product-card__button product-card__button--primary" href="#">Подробнее</a>
+            <button class="product-card__button product-card__button--secondary product-card__button--secondary-favorite" type="button">В избранном</button>
+            <div class="product-card__stars"></div>
+            <div class="product-card__button product-card-button__rating">Рейтинг: <span class="product-card__rating-number">9,2</span></div>
           </li>
           <li class="product-card">
             <a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/desert_quail_inn_300x212_2x.jpg" width="300" height="212" loading="lazy" alt="Гранд-Каньон в ясную погоду">
               <h3 class="product-card__title">Desert Quail Inn</h3> </a>
-            <div class="product-card__description"> <span class="product-card__type">Гостиница</span> <span class="product-card__price">От 2500 ₽</span> </div>
-            <div class="product-card__button-container"> <a class="product-card__button product-card__button--primary" href="#">Подробнее</a>
+            <span class="product-card__type">Гостиница</span> <span class="product-card__price">От 2500 ₽</span>
+            <a class="product-card__button product-card__button--primary" href="#">Подробнее</a>
               <button class="product-card__button product-card__button--secondary" type="button">В избранное</button>
-            </div>
-            <div class="product-card__rating-container">
               <div class="product-card__stars"></div>
               <div class="product-card__button product-card-button__rating">Рейтинг: <span class="product-card__rating-number">6,9</span></div>
-            </div>
           </li>
           <li class="product-card">
             <a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/greentree_inn_300x212_2x.jpg" width="300" height="212" loading="lazy" alt="Свет над ночным небом Гранд=Каньона">
               <h3 class="product-card__title">GreenTree</h3> </a>
-            <div class="product-card__description"> <span class="product-card__type">Гостиница</span> <span class="product-card__price">От 1500 ₽</span> </div>
-            <div class="product-card__button-container"> <a class="product-card__button product-card__button--primary" href="#">Подробнее</a>
+            <span class="product-card__type">Гостиница</span> <span class="product-card__price">От 1500 ₽</span>
+             <a class="product-card__button product-card__button--primary" href="#">Подробнее</a>
               <button class="product-card__button product-card__button--secondary" type="button">В избранное</button>
-            </div>
-            <div class="product-card__rating-container">
               <div class="product-card__stars"></div>
               <div class="product-card__button product-card-button__rating">Рейтинг: <span class="product-card__rating-number">5,0</span></div>
-            </div>
           </li>
         </ol>
         <ul class="pagination">
@@ -207,7 +189,7 @@
         <h2 class="subscribe__title">Подпишитесь на рассылку</h2>
         <p class="subscribe__text">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post">
-          <span class="subscribe__label"><input type="email" name="email" placeholder="Ваш e-mail"></span><button class="subscribe__button" type="submit">Подписаться</button>
+          <input type="email" name="email" placeholder="Ваш e-mail"><button class="subscribe__button" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
@@ -237,7 +219,7 @@
       </section>
       <section class="footer__contacts">
         <h2 class="visually-hidden">Контактный номер</h2>
-        <p class="footer__hot-number"><a href="tel:+7(812) 812-12-12">+7(812) 812-12-12</a></p>
+        <a href="tel:+7(812) 812-12-12">+7(812) 812-12-12</a>
       </section>
       <section class="footer__production">
         <h2 class="visually-hidden">Сделано в html academy</h2>
