--- a/index.html
+++ b/index.html
@@ -13,20 +13,14 @@
             <img class="navigation__logo" src="images/logo/logo_sedona.svg" alt="Логотип «Седона»" width="140" height="70">
           </a>
           <ul class="navigation__list">
-                        <li class="navigation__item">
-              <a class="navigation__link navigation__link--active-tab" href="index.html">
-                <span class="navigation__label">Главная</span>
-              </a>
+            <li class="navigation__item">
+              <a class="navigation__link navigation__link--active-tab" href="index.html">Главная</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link" href="#">
-                <span class="navigation__label">О Седоне</span>
-              </a>
+              <a class="navigation__link" href="#">О Седоне</a>
             </li>
             <li class="navigation__item">
-              <a class="navigation__link" href="catalog.html">
-                <span class="navigation__label">Гостиницы</span>
-              </a>
+              <a class="navigation__link" href="catalog.html">Гостиницы</a>
             </li>
           </ul>
 
@@ -150,7 +144,7 @@
           <h2 class="subscribe__title">Подпишитесь на рассылку</h2>
           <p class="subscribe__text">Только полезная информация и никакого спама, честное бойскаутское!</p>
           <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post">
-            <span class="subscribe__label"><input type="email" name="email" placeholder="Ваш e-mail"></span><button class="subscribe__button" type="submit">Подписаться</button>
+            <input type="email" name="email" placeholder="Ваш e-mail"><button class="subscribe__button" type="submit">Подписаться</button>
           </form>
         </section>
       </main>
@@ -180,7 +174,7 @@
         </section>
         <section class="footer__contacts">
           <h2 class="visually-hidden">Контактный номер</h2>
-          <p class="footer__hot-number"><a href="tel:+7(812) 812-12-12">+7(812) 812-12-12</a></p>
+          <a href="tel:+7(812) 812-12-12">+7(812) 812-12-12</a>
         </section>
         <section class="footer__production">
           <h2 class="visually-hidden">Сделано в html academy</h2>
