--- a/catalog.html
+++ b/catalog.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>HTML Academy: Каталог</title>
   <link rel="stylesheet" href="styles/styles.css">
+  <link type="Image/x-icon" href="images/icons/favicon.svg" rel="icon">
 </head>
 
 <body>
