second advantages list updated

--- a/index.html
+++ b/index.html
@@ -95,18 +95,18 @@
               </div>
             </li>
           </ul>
-          <ul class="conditions__list">
-            <li class="conditions__item conditions__item--house">
-              <h3 class="conditions__title">Жильё</h3>
-              <p class="conditions__text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          <ul class="advantages__list advantages__list--conditions">
+            <li class="advantages__item advantages__item--house">
+              <h3 class="advantages__title">Жильё</h3>
+              <p class="advantages__text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </li>
-            <li class="conditions__item conditions__item--food">
-              <h3 class="conditions__title">Еда</h3>
-              <p class="conditions__text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            <li class="advantages__item advantages__item--dark advantages__item--food">
+              <h3 class="advantages__title">Еда</h3>
+              <p class="advantages__text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
             </li>
-            <li class="conditions__item conditions__item--souvenir">
-              <h3 class="conditions__title">Сувениры</h3>
-              <p class="conditions__text">Не только китайского, но и настоящего местного производства!</p>
+            <li class="advantages__item advantages__item--souvenir">
+              <h3 class="advantages__title">Сувениры</h3>
+              <p class="advantages__text">Не только китайского, но и настоящего местного производства!</p>
             </li>
           </ul>
         </section>
