--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section class="advantages" data-test="advantages">
           <h2 class="visually-hidden">Преимущества</h2>
           <ul class="advantages__list">
-            <li class="advantages__item advantages__item--light advantages__item--large advantages__item--reverse">
+            <li class="advantages__item advantages__item--dark advantages__item--large advantages__item--reverse">
               <img class="advantages__picture" src="images/index/sedona_small_town_800x384.jpg" alt="Настоящий городок Седона" width="800" height="384" loading="lazy">
               <div class="advantages__content">
                 <h3 class="advantages__title">Настоящий городок</h3>
@@ -87,7 +87,7 @@
                 <p class="advantages__text">Большинство едет в Гранд Каньон и толпится там</p>
               </div>
             </li>
-            <li class="advantages__item advantages__item--light advantages__item--large">
+            <li class="advantages__item advantages__item--dark advantages__item--large">
               <img class="advantages__picture" src="images/index/devil_bridge_800x384.jpg" alt="Мост через Гранд-Каньон" width="800" height="384" loading="lazy">
               <div class="advantages__content">
                 <h3 class="advantages__title">Там есть <br/>мост дьявола</h3>
@@ -100,7 +100,7 @@
               <h3 class="advantages__title">Жильё</h3>
               <p class="advantages__text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </li>
-            <li class="advantages__item advantages__item--dark advantages__item--food">
+            <li class="advantages__item advantages__item--light advantages__item--food">
               <h3 class="advantages__title">Еда</h3>
               <p class="advantages__text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
             </li>
