--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               </a>
             </li>
             <li class="navigation__item">
-              <a class="button button--primary button--navigation" href="#">Хочю сюда!</a>
+              <a class="button button--primary button--navigation" href="#">Хочу сюда!</a>
             </li>
           </ul>
         </nav>
