footer logo hover updated

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         </section>
         <section class="footer__production">
           <h2 class="visually-hidden">Сделано в html academy</h2>
-          <a href="https://htmlacademy.ru/">
+          <a class="footer__logo-link" href="https://htmlacademy.ru/">
             <svg class="footer__logo" width="115" height="34" viewBox="0 0 115 34" xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#clip0_33515_1190)">
                 <path d="M0 13.2564V15.8564H2.5V13.2564H0Z" />
